[package]
name = "in_range"
version = "0.1.0"
edition = "2021"
authors = ["Nick Shockey <shockeynj@gmail.com>"]
description = "Returns true if a number is in range"
readme = "./README.md"
repository = "https://github.com/njshockey/in-range-rs.git"
homepage = "https://github.com/njshockey/in-range-rs"
license = "MIT OR Apache-2.0"
keywords = ["no-std", "utility", "math"]
categories = ["mathematics", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
